# saleor-apps-rs

./: .dockerignore  .env  .env.example  .gitignore  .neoconf.json  .neoconf.json.old  .tokeinore  Cargo.toml  Dockerfile  FSL-1.1-MIT.md  Makefile.toml  README.md  apl.json  db.formatted.json  docker-bulk-price-manipulator.env  docker-compose.yml  docker-gateway.env  docker-sitemap.env  errors.json  left.txt  leptosfmt.toml  right.txt  rust-toolchain.toml  rust-toolchain.tomln  tests-compose.yml  whole_json.json
.github/: rust.yml
.github/workflows/: CI.yml  cargo-clippy.yml  rust-clippy.yml  security-audit.yml
app-template/: Cargo.toml  README.md
app-template-ui/: .neoconf.json  Cargo.toml  build.rs  package-lock.json  rust-toolchain.toml  tailwind.config.js
app-template-ui/src/: app.rs  error_template.rs  fallback.rs  lib.rs  main.rs
app-template-ui/src/components/universal/: mod.rs
app-template-ui/src/queries/: event_products_updated.rs
app-template-ui/src/routes/: home.rs  mod.rs
app-template-ui/src/routes/api/: manifest.rs  mod.rs  register.rs  webhooks.rs
app-template-ui/src/routes/extensions/: mod.rs  order_to_pdf.rs
app-template-ui/style/: base.css
app-template/schema/: note.txt
app-template/src/: app.rs  main.rs
app-template/src/queries/: product_metadata_update.rs
app-template/src/routes/: mod.rs  register.rs  webhooks.rs
apps/bulk-price-manipulator/: Cargo.toml  README.md  rust-toolchain.toml
apps/bulk-price-manipulator/src/queries/: update_variant_price.rs
apps/bulk-price-manipulator/src/updater/: mod.rs
apps/heureka-xml-feed/: Cargo.toml  README.md  build.rs  package-lock.json  rust-toolchain.toml  saleor-heureka-testing-2025-05-02.surql  saleor-heureka-testing-2025-05-10.surql  tailwind.config.js
apps/heureka-xml-feed/src/: app.rs  error_template.rs  fallback.rs  lib.rs  main.rs
apps/heureka-xml-feed/src/queries/: event_products_updated.rs  mod.rs  products_variants_categories.rs  query_get_all_products.rs  query_shipping_details.rs  surreal_types.rs
apps/heureka-xml-feed/src/routes/: heureka_xml_feed.rs  home.rs  mod.rs
apps/heureka-xml-feed/src/routes/api/: register.rs  webhooks.rs
apps/heureka-xml-feed/src/routes/extensions/: order_to_pdf.rs
apps/heureka-xml-feed/src/server/: event_handler.rs  graphqls.rs  mod.rs  surrealdbs.rs  task_handler.rs
apps/order-analytics/: Cargo.toml  README.md  build.rs
apps/order-analytics/src/: main.rs
apps/order-analytics/src/queries/: mod.rs
apps/order-analytics/src/queries/surreal/: mod.rs
apps/order-analytics/src/routes/: webhooks.rs
apps/simple-payment-gateway/: Cargo.toml  README.md
apps/simple-payment-gateway/src/queries/: mutation_order_payment_method_update.rs  mutation_transaction_update.rs
apps/simple-payment-gateway/src/routes/: register.rs
apps/sitemap-generator/: Cargo.toml  README.md  rust-toolchain.toml
apps/sitemap-generator/src/queries/: get_all_products.rs  mod.rs
apps/sitemap-generator/src/sitemap/: event_handler.rs  mod.rs  regenerate.rs
apps/sitemap-generator/src/tests/: mod.rs
bulk-price-manipulator/: Cargo.toml  README.md  apl.json
bulk-price-manipulator/src/: app.rs  main.rs
bulk-price-manipulator/src/queries/: get_all_products.rs  get_channel_id.rs  mod.rs
bulk-price-manipulator/src/routes/: mod.rs  register.rs
bulk-price-manipulator/src/updater/: mod.rs
icons/: app logo template.xcf
libs/heureka-xml-feed/: Cargo.toml  faker-feed.xml  heureka-feed-2.0.xsd
libs/heureka-xml-feed/src/: lib.rs  schema.rs  tests.rs
libs/sdk/: Cargo.toml  rust-toolchain.toml
libs/sdk/src/bridge/: event.rs
libs/sdk/src/manifest/: extension.rs
libs/sdk/src/middleware/: verify_webhook_signature.rs
libs/sdk/src/settings_manager/: encrypted_metadata.rs  queries.rs
saleor-app-sdk/: Cargo.toml
saleor-app-sdk/src/: config.rs  headers.rs  lib.rs  manifest.rs  webhooks.rs
saleor-app-sdk/src/apl/: env_apl.rs  file_apl.rs  mod.rs  redis_apl.rs
saleor-app-template/: Cargo.toml  Dockerfile
saleor-app-template/src/: app.rs  config.rs  main.rs
saleor-app-template/src/routes/: manifest.rs  mod.rs  register.rs
sdk/: .neoconf.json  Cargo.toml  README.md  build.rs
sdk/src/: config.rs  headers.rs  lib.rs  locales.rs  manifest.rs
sdk/src/apl/: env_apl.rs  file_apl.rs  mod.rs  redis_apl.rs
sdk/src/bridge/: action.rs  event.rs  mod.rs
sdk/src/manifest/: extension.rs  mod.rs
sdk/src/middleware/: mod.rs  verify_webhook_signature.rs
sdk/src/settings_manager/: metadata.rs  mod.rs
sdk/src/webhooks/: mod.rs  sync_response.rs  utils.rs
simple-payment-gateway/: Cargo.toml  README.md
simple-payment-gateway/src/: app.rs  main.rs
simple-payment-gateway/src/queries/: event_transactions.rs  mod.rs  mutation_transaction_update.rs
simple-payment-gateway/src/routes/: mod.rs  register.rs  webhooks.rs
sitemap-generator/: Cargo.toml  README.md  build.rs  db.cbor  db.json  rust-toolchain.toml
sitemap-generator/public/schemas/: saleor-ref.xsd
sitemap-generator/src/: app.rs  main.rs  test.rs
sitemap-generator/src/queries/: event_subjects_updated.rs  get_all_categories.rs  get_all_categories_n_products.rs  get_all_collections.rs  get_all_pages.rs  mod.rs
sitemap-generator/src/routes/: manifest.rs  mod.rs  register.rs  webhooks.rs
sitemap-generator/src/sitemap/: event_handler.rs  mod.rs  regenerate.rs
sitemap-generator/src/tests/: mod.rs  utils.rs
src/: app.rs  config.rs  main.rs  saleor.rs
src/routes/: manifest.rs  mod.rs  register.rs
