[workspace]
members = [
  "sdk",
  "app-template",
  "app-template-ui",
  "sitemap-generator",
  "simple-payment-gateway",
  "bulk-price-manipulator",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
cynic = { version = "3.5.1", features = ["http-surf"] }
surf = "2.3.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
redis = { version = "0.25.3", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
envy = "0.4.2"
tracing = "0.1.40"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
axum = "0.7.5"
saleor-app-sdk = { path = "sdk" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
cynic-codegen = "3.5.1"
rust_decimal = { version = "1.35.0", features = ["serde-float"] }
iso_currency = { version = "0.4.4", features = ["with-serde", "iterator"] }
pulldown-cmark = "0.11.0"
http = "1"
thiserror = "1.0.61"
wasm-bindgen = "=0.2.99"
console_error_panic_hook = "0.1"
leptos = { version = "0.6", features = ["nightly"] }
leptos_axum = { version = "0.6" }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
web-sys = "0.3.69"
rstest = "0.21.0"
async-std = { version = "1.5", features = ["attributes"] }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
