[workspace]
members = [
  "libs/sdk",
  "libs/heureka-xml-feed",
  "app-template",
  "app-template-ui",
  "apps/sitemap-generator",
  "apps/heureka-xml-feed",
  "apps/order-analytics",
  "apps/simple-payment-gateway",
  "apps/bulk-price-manipulator",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.82"
cynic = { version = "3.5.1", features = ["http-surf"] }
surf = "2.3.2"
serde = "1.0.197"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
strum = { version = "0.26.2" }
strum_macros = { version = "0.26.2" }
redis = { version = "0.25.3", features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
envy = "0.4.2"
tracing = "0.1.40"
tracing-serde = "0.1.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
axum = "0.7.5"
saleor-app-sdk = { path = "libs/sdk" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
cynic-codegen = "3.5.1"
rust_decimal = { version = "1.35.0", features = ["serde-float", "serde"] }
iso_currency = { version = "0.4.4", features = ["with-serde", "iterator"] }
pulldown-cmark = "0.11.0"
thiserror = "1.0.61"
wasm-bindgen = "=0.2.100"
wasm-bindgen-futures = "0.4.50"
console_error_panic_hook = "0.1"
leptos = { version = "0.7.7", features = ["nightly"] }
leptos_axum = { version = "0.7.7" }
leptos_meta = { version = "0.7.7", features = ["ssr"] }
leptos_router = { version = "0.7.7", features = ["nightly"] }
log = "0.4.25"
simple_logger = "5.0.0"
web-sys = "0.3.69"
rstest = "0.21.0"
async-std = { version = "1.5", features = ["attributes"] }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json"] }
http = { version = "1.1.0" }
rand = "0.9.0"
heureka-xml-feed = { path = "libs/heureka-xml-feed" }
surrealdb = { version = "2.2.1", features = ["kv-rocksdb", "protocol-http"] }
tinytemplate = { version = "1.2.1" }

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
