[package]
name = "saleor-app-template"
version = "0.1.0"
edition = "2021"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
description = "A simple rust app template for Saleor using axum"
homepage = "https://github.com/djkato/saleor-app-rs-template"
repository = "https://github.com/djkato/saleor-app-rs-template"
documentation = "https://github.com/djkato/saleor-app-rs-template"
keywords = ["saleor", "sdk", "plugin", "template"]
categories = ["api-bindings", "web-programming::http-server"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
redis = { workspace = true, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
envy.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
axum.workspace = true
# saleor-app-sdk.workspace = true
saleor-app-sdk = { workspace = true, features = ["recommended", "file_apl"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
surf.workspace = true
cynic = { workspace = true, features = ["http-surf"] }
cynic-codegen.workspace = true

[build-dependencies]
cynic-codegen.workspace = true
