[package]
name = "bulk-price-manipulator"
version = "1.0.0"
edition = "2021"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
description = "Runs a user defined expression to change all variant prices"
homepage = "https://github.com/djkato/saleor-apps-rs"
repository = "https://github.com/djkato/saleor-apps-rs"
documentation = "https://github.com/djkato/saleor-apps-rs"
keywords = ["saleor", "plugin"]
categories = ["web-programming::http-server"]
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
envy.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
dotenvy.workspace = true
axum.workspace = true
saleor-app-sdk = { workspace = true, features = ["file_apl"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
surf.workspace = true
cynic = { workspace = true, features = ["http-surf"] }
cynic-codegen.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
evalexpr = "12.0.2"

[dev-dependencies]
rstest.workspace = true
async-std = { workspace = true, features = ["attributes"] }
random_word = { version = "0.4.3", features = ["en"] }
rand = "0.8.5"
serial_test = "3.1.1"

[build-dependencies]
cynic-codegen.workspace = true
