[package]
name = "saleor-app-sdk"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
version = "0.2.1"
edition = "2021"
description = "Unofficial Saleor App SDK like library, made to for Rust."
keywords = ["saleor", "sdk", "plugin"]
categories = ["api-bindings", "web-programming::http-server"]
homepage = "https://github.com/djkato/saleor-apps-rs"
repository = "https://github.com/djkato/saleor-apps-rs"
documentation = "https://github.com/djkato/saleor-apps-rs"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.workspace = true
redis = { workspace = true, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
] }
serde.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
envy.workspace = true
dotenvy.workspace = true
tower = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-float"] }
iso_currency = { workspace = true, features = ["with-serde", "iterator"] }
reqwest = { version = "0.12.3", features = ["json"] }
jsonwebtoken = "9.3.0"
async-trait = "0.1.80"
http = "1.1.0"
url = "2.5.0"
strum = "0.26.2"
strum_macros = "0.26.2"
