[package]
name = "saleor-app-sdk"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
version = "0.6.2"
edition = "2021"
description = "Unofficial Saleor App SDK library, made to for Rust."
keywords = ["saleor", "sdk", "plugin"]
categories = ["api-bindings", "web-programming::http-server"]
homepage = "https://github.com/djkato/saleor-apps-rs"
repository = "https://github.com/djkato/saleor-apps-rs"
documentation = "https://github.com/djkato/saleor-apps-rs"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
envy = { workspace = true }
dotenvy = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-float"] }
iso_currency = { workspace = true, features = ["with-serde", "iterator"] }
strum.workspace = true
strum_macros.workspace = true
async-trait = { version = "0.1.80" }

## Needed for middleware
axum = { workspace = true, optional = true }
jsonwebtoken = { version = "9.3.0", optional = true }
url = { version = "2.5.0", optional = true }
reqwest = { version = "0.12.3", features = ["json"], optional = true }
http = { version = "1.1.0", optional = true }

## Needed for APLs
redis = { workspace = true, features = [
  "aio",
  "tokio-comp",
  "connection-manager",
], optional = true }

## Tracing
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

## Needed for webhooks

## Needed for bridge
wasm-bindgen = { workspace = true, optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

## Needed for settings_manager
surf = { workspace = true, optional = true }
cynic = { workspace = true, optional = true, features = ["http-surf"] }
cynic-codegen.workspace = true
serde_with = { optional = true, version = "3.11.0" }

[dependencies.web-sys]
optional = true
workspace = true
features = [
  "Window",
  "Location",
  "Document",
  "Url",
  "UrlSearchParams",
  "EventListener",
  "EventTarget",
  "console",
]

[dev-dependencies]

## Needed for settings_manager
[build-dependencies]
cynic-codegen.workspace = true

[features]
recommended = ["tracing", "redis_apl", "webhook_utils", "middleware"]
default = []
middleware = [
  "dep:axum",
  "dep:jsonwebtoken",
  "dep:url",
  "dep:reqwest",
  "dep:http",
]
redis_apl = ["dep:redis"]
file_apl = []
webhook_utils = ["dep:http"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
settings_manager = ["dep:cynic", "dep:surf", "dep:serde_with"]
bridge = [
  "dep:wasm-bindgen",
  "dep:serde-wasm-bindgen",
  "dep:web-sys",
  "dep:jsonwebtoken",
  "dep:reqwest",
]
