[package]
name = "sitemap-generator"
version = "1.0.1"
edition = "2021"
authors = ["Djkáťo <djkatovfx@gmail.com>"]
description = "Creates and keeps Sitemap.xml uptodate with Saleor."
homepage = "https://github.com/djkato/saleor-apps-rs"
repository = "https://github.com/djkato/saleor-apps-rs"
documentation = "https://github.com/djkato/saleor-apps-rs"
keywords = ["saleor", "plugin"]
categories = ["web-programming::http-server"]
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
envy.workspace = true
tracing.workspace = true
tracing-serde.workspace = true
tracing-subscriber.workspace = true
tracing-test = "0.2.5"
dotenvy.workspace = true
axum.workspace = true
saleor-app-sdk = { workspace = true, features = ["file_apl"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true, features = ["fs", "trace"] }
surf.workspace = true
cynic = { workspace = true, features = ["http-surf"] }
cynic-codegen.workspace = true
thiserror.workspace = true
rstest.workspace = true
async-std = { workspace = true, features = ["attributes"] }

toml = "0.8.14"
# tera = { version = "1.19.1", default-features = false }
# fd-lock = "4.0.2"
# quick-xml = { version = "0.34.0", features = ["serialize"] }
# flate2 = "1.0.28"
tinytemplate = "1.2.1"
chrono = { version = "0.4.34", features = ["serde"] }
serde_cbor = "0.11.2"
# pico-args = "0.5.0"
# rayon = "1.10.0"
# itertools = "0.13.0"

[dev-dependencies]
random_word = { version = "0.4.3", features = ["en"] }
rand = "0.8.5"
serial_test = "3.1.1"

[build-dependencies]
cynic-codegen.workspace = true
